--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,7 +1,1 @@
-{
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/[^.]+", "dest": "/index.html", "status": 200 }
-  ]
-}
+deleted
